# rust-lab

./: Cargo.toml  Justfile  README.md
assetsize/: Cargo.toml
assetsize/src/: main.rs
lines/: Cargo.toml
lines/src/: main.rs
parhash/: Cargo.toml
parhash/src/: main.rs
