[workspace]
members = ["parhash", "lines", "assetsize"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = ""
authors = ["Your Name"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
walkdir = "2"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
